etapa3/y.output
   0  $accept : programa $end

   1  programa : decl_global programa
   2           | def_funcao programa
   3           |

   4  decl_global : decl_var ';'
   5              | decl_vetor ';'

   6  decl_var : KW_DECLARE TK_IDENTIFIER ':' tipo_var

   7  decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']'

   8  tipo_var : KW_INTEGER
   9           | KW_FLOATING
  10           | KW_BOOLEAN
  11           | KW_CHARACTER

  12  def_funcao : cabecalho comando ';'

  13  cabecalho : TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')'

  14  lista_parametros : lista_parametros_nao_vazia
  15                   |

  16  lista_parametros_nao_vazia : parametro ',' lista_parametros_nao_vazia
  17                             | parametro

  18  parametro : TK_IDENTIFIER ':' tipo_var

  19  comando : bloco_comando
  20          | controle_fluxo
  21          | atribuicao
  22          | input
  23          | output
  24          | return
  25          |

  26  bloco_comando : '{' seq_comando '}'

  27  seq_comando : comando
  28              | comando ';' seq_comando
  29              | decl_var
  30              | decl_var ';' seq_comando
  31              | decl_vetor
  32              | decl_vetor ';' seq_comando

  33  atribuicao : TK_IDENTIFIER '=' expressao
  34             | TK_IDENTIFIER '[' expressao ']' '=' expressao

  35  input : KW_INPUT TK_IDENTIFIER

  36  output : KW_OUTPUT lista_expressoes_nao_vazia

  37  lista_expressoes_nao_vazia : expressao ',' lista_expressoes_nao_vazia
  38                             | expressao

  39  return : KW_RETURN expressao

  40  controle_fluxo : KW_IF '(' expressao ')' KW_THEN comando
  41                 | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando
  42                 | KW_WHILE '(' expressao ')' comando
  43                 | KW_DO comando KW_WHILE '(' expressao ')'

  44  expressao : TK_IDENTIFIER
  45            | TK_IDENTIFIER '[' expressao ']'
  46            | LIT_INTEGER
  47            | LIT_FLOATING
  48            | LIT_FALSE
  49            | LIT_TRUE
  50            | LIT_CHARACTER
  51            | LIT_STRING
  52            | expressao '+' expressao
  53            | expressao '-' expressao
  54            | expressao '*' expressao
  55            | expressao '/' expressao
  56            | expressao '<' expressao
  57            | expressao '>' expressao
  58            | '(' expressao ')'
  59            | expressao OPERATOR_LE expressao
  60            | expressao OPERATOR_GE expressao
  61            | expressao OPERATOR_EQ expressao
  62            | expressao OPERATOR_NE expressao
  63            | expressao OPERATOR_AND expressao
  64            | expressao OPERATOR_OR expressao
  65            | TK_IDENTIFIER '(' lista_expressoes ')'

  66  lista_expressoes : lista_expressoes_nao_vazia
  67                   |

state 0
	$accept : . programa $end  (0)
	programa : .  (3)

	KW_DECLARE  shift 1
	TK_IDENTIFIER  shift 2
	$end  reduce 3

	programa  goto 3
	decl_global  goto 4
	def_funcao  goto 5
	decl_var  goto 6
	decl_vetor  goto 7
	cabecalho  goto 8


state 1
	decl_var : KW_DECLARE . TK_IDENTIFIER ':' tipo_var  (6)
	decl_vetor : KW_DECLARE . TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']'  (7)

	TK_IDENTIFIER  shift 9
	.  error


state 2
	cabecalho : TK_IDENTIFIER . ':' tipo_var '(' lista_parametros ')'  (13)

	':'  shift 10
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : decl_global . programa  (1)
	programa : .  (3)

	KW_DECLARE  shift 1
	TK_IDENTIFIER  shift 2
	$end  reduce 3

	programa  goto 11
	decl_global  goto 4
	def_funcao  goto 5
	decl_var  goto 6
	decl_vetor  goto 7
	cabecalho  goto 8


state 5
	programa : def_funcao . programa  (2)
	programa : .  (3)

	KW_DECLARE  shift 1
	TK_IDENTIFIER  shift 2
	$end  reduce 3

	programa  goto 12
	decl_global  goto 4
	def_funcao  goto 5
	decl_var  goto 6
	decl_vetor  goto 7
	cabecalho  goto 8


state 6
	decl_global : decl_var . ';'  (4)

	';'  shift 13
	.  error


state 7
	decl_global : decl_vetor . ';'  (5)

	';'  shift 14
	.  error


state 8
	def_funcao : cabecalho . comando ';'  (12)
	comando : .  (25)

	KW_IF  shift 15
	KW_WHILE  shift 16
	KW_DO  shift 17
	KW_INPUT  shift 18
	KW_RETURN  shift 19
	KW_OUTPUT  shift 20
	TK_IDENTIFIER  shift 21
	'{'  shift 22
	';'  reduce 25

	comando  goto 23
	bloco_comando  goto 24
	controle_fluxo  goto 25
	atribuicao  goto 26
	input  goto 27
	output  goto 28
	return  goto 29


state 9
	decl_var : KW_DECLARE TK_IDENTIFIER . ':' tipo_var  (6)
	decl_vetor : KW_DECLARE TK_IDENTIFIER . ':' tipo_var '[' LIT_INTEGER ']'  (7)

	':'  shift 30
	.  error


state 10
	cabecalho : TK_IDENTIFIER ':' . tipo_var '(' lista_parametros ')'  (13)

	KW_INTEGER  shift 31
	KW_FLOATING  shift 32
	KW_BOOLEAN  shift 33
	KW_CHARACTER  shift 34
	.  error

	tipo_var  goto 35


state 11
	programa : decl_global programa .  (1)

	.  reduce 1


state 12
	programa : def_funcao programa .  (2)

	.  reduce 2


state 13
	decl_global : decl_var ';' .  (4)

	.  reduce 4


state 14
	decl_global : decl_vetor ';' .  (5)

	.  reduce 5


state 15
	controle_fluxo : KW_IF . '(' expressao ')' KW_THEN comando  (40)
	controle_fluxo : KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando  (41)

	'('  shift 36
	.  error


state 16
	controle_fluxo : KW_WHILE . '(' expressao ')' comando  (42)

	'('  shift 37
	.  error


17: shift/reduce conflict (shift 16, reduce 25) on KW_WHILE
state 17
	controle_fluxo : KW_DO . comando KW_WHILE '(' expressao ')'  (43)
	comando : .  (25)

	KW_IF  shift 15
	KW_WHILE  shift 16
	KW_DO  shift 17
	KW_INPUT  shift 18
	KW_RETURN  shift 19
	KW_OUTPUT  shift 20
	TK_IDENTIFIER  shift 21
	'{'  shift 22

	comando  goto 38
	bloco_comando  goto 24
	controle_fluxo  goto 25
	atribuicao  goto 26
	input  goto 27
	output  goto 28
	return  goto 29


state 18
	input : KW_INPUT . TK_IDENTIFIER  (35)

	TK_IDENTIFIER  shift 39
	.  error


state 19
	return : KW_RETURN . expressao  (39)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 48


state 20
	output : KW_OUTPUT . lista_expressoes_nao_vazia  (36)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 49
	lista_expressoes_nao_vazia  goto 50


state 21
	atribuicao : TK_IDENTIFIER . '=' expressao  (33)
	atribuicao : TK_IDENTIFIER . '[' expressao ']' '=' expressao  (34)

	'['  shift 51
	'='  shift 52
	.  error


state 22
	bloco_comando : '{' . seq_comando '}'  (26)
	comando : .  (25)

	KW_DECLARE  shift 1
	KW_IF  shift 15
	KW_WHILE  shift 16
	KW_DO  shift 17
	KW_INPUT  shift 18
	KW_RETURN  shift 19
	KW_OUTPUT  shift 20
	TK_IDENTIFIER  shift 21
	'{'  shift 22
	';'  reduce 25
	'}'  reduce 25

	decl_var  goto 53
	decl_vetor  goto 54
	comando  goto 55
	bloco_comando  goto 24
	controle_fluxo  goto 25
	atribuicao  goto 26
	input  goto 27
	output  goto 28
	return  goto 29
	seq_comando  goto 56


state 23
	def_funcao : cabecalho comando . ';'  (12)

	';'  shift 57
	.  error


state 24
	comando : bloco_comando .  (19)

	.  reduce 19


state 25
	comando : controle_fluxo .  (20)

	.  reduce 20


state 26
	comando : atribuicao .  (21)

	.  reduce 21


state 27
	comando : input .  (22)

	.  reduce 22


state 28
	comando : output .  (23)

	.  reduce 23


state 29
	comando : return .  (24)

	.  reduce 24


state 30
	decl_var : KW_DECLARE TK_IDENTIFIER ':' . tipo_var  (6)
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' . tipo_var '[' LIT_INTEGER ']'  (7)

	KW_INTEGER  shift 31
	KW_FLOATING  shift 32
	KW_BOOLEAN  shift 33
	KW_CHARACTER  shift 34
	.  error

	tipo_var  goto 58


state 31
	tipo_var : KW_INTEGER .  (8)

	.  reduce 8


state 32
	tipo_var : KW_FLOATING .  (9)

	.  reduce 9


state 33
	tipo_var : KW_BOOLEAN .  (10)

	.  reduce 10


state 34
	tipo_var : KW_CHARACTER .  (11)

	.  reduce 11


state 35
	cabecalho : TK_IDENTIFIER ':' tipo_var . '(' lista_parametros ')'  (13)

	'('  shift 59
	.  error


state 36
	controle_fluxo : KW_IF '(' . expressao ')' KW_THEN comando  (40)
	controle_fluxo : KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando  (41)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 60


state 37
	controle_fluxo : KW_WHILE '(' . expressao ')' comando  (42)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 61


state 38
	controle_fluxo : KW_DO comando . KW_WHILE '(' expressao ')'  (43)

	KW_WHILE  shift 62
	.  error


state 39
	input : KW_INPUT TK_IDENTIFIER .  (35)

	.  reduce 35


state 40
	expressao : TK_IDENTIFIER .  (44)
	expressao : TK_IDENTIFIER . '[' expressao ']'  (45)
	expressao : TK_IDENTIFIER . '(' lista_expressoes ')'  (65)

	'['  shift 63
	'('  shift 64
	KW_ELSE  reduce 44
	KW_WHILE  reduce 44
	OPERATOR_LE  reduce 44
	OPERATOR_GE  reduce 44
	OPERATOR_EQ  reduce 44
	OPERATOR_NE  reduce 44
	OPERATOR_AND  reduce 44
	OPERATOR_OR  reduce 44
	'<'  reduce 44
	'>'  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	';'  reduce 44
	']'  reduce 44
	')'  reduce 44
	','  reduce 44
	'}'  reduce 44


state 41
	expressao : LIT_INTEGER .  (46)

	.  reduce 46


state 42
	expressao : LIT_FLOATING .  (47)

	.  reduce 47


state 43
	expressao : LIT_FALSE .  (48)

	.  reduce 48


state 44
	expressao : LIT_TRUE .  (49)

	.  reduce 49


state 45
	expressao : LIT_CHARACTER .  (50)

	.  reduce 50


state 46
	expressao : LIT_STRING .  (51)

	.  reduce 51


state 47
	expressao : '(' . expressao ')'  (58)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 65


state 48
	return : KW_RETURN expressao .  (39)
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	KW_ELSE  reduce 39
	KW_WHILE  reduce 39
	';'  reduce 39
	'}'  reduce 39


state 49
	lista_expressoes_nao_vazia : expressao . ',' lista_expressoes_nao_vazia  (37)
	lista_expressoes_nao_vazia : expressao .  (38)
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	','  shift 78
	KW_ELSE  reduce 38
	KW_WHILE  reduce 38
	';'  reduce 38
	')'  reduce 38
	'}'  reduce 38


state 50
	output : KW_OUTPUT lista_expressoes_nao_vazia .  (36)

	.  reduce 36


state 51
	atribuicao : TK_IDENTIFIER '[' . expressao ']' '=' expressao  (34)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 79


state 52
	atribuicao : TK_IDENTIFIER '=' . expressao  (33)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 80


state 53
	seq_comando : decl_var .  (29)
	seq_comando : decl_var . ';' seq_comando  (30)

	';'  shift 81
	'}'  reduce 29


state 54
	seq_comando : decl_vetor .  (31)
	seq_comando : decl_vetor . ';' seq_comando  (32)

	';'  shift 82
	'}'  reduce 31


state 55
	seq_comando : comando .  (27)
	seq_comando : comando . ';' seq_comando  (28)

	';'  shift 83
	'}'  reduce 27


state 56
	bloco_comando : '{' seq_comando . '}'  (26)

	'}'  shift 84
	.  error


state 57
	def_funcao : cabecalho comando ';' .  (12)

	.  reduce 12


state 58
	decl_var : KW_DECLARE TK_IDENTIFIER ':' tipo_var .  (6)
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var . '[' LIT_INTEGER ']'  (7)

	'['  shift 85
	';'  reduce 6
	'}'  reduce 6


state 59
	cabecalho : TK_IDENTIFIER ':' tipo_var '(' . lista_parametros ')'  (13)
	lista_parametros : .  (15)

	TK_IDENTIFIER  shift 86
	')'  reduce 15

	lista_parametros  goto 87
	lista_parametros_nao_vazia  goto 88
	parametro  goto 89


state 60
	controle_fluxo : KW_IF '(' expressao . ')' KW_THEN comando  (40)
	controle_fluxo : KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando  (41)
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	')'  shift 90
	.  error


state 61
	controle_fluxo : KW_WHILE '(' expressao . ')' comando  (42)
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	')'  shift 91
	.  error


state 62
	controle_fluxo : KW_DO comando KW_WHILE . '(' expressao ')'  (43)

	'('  shift 92
	.  error


state 63
	expressao : TK_IDENTIFIER '[' . expressao ']'  (45)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 93


state 64
	expressao : TK_IDENTIFIER '(' . lista_expressoes ')'  (65)
	lista_expressoes : .  (67)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	')'  reduce 67

	expressao  goto 49
	lista_expressoes_nao_vazia  goto 94
	lista_expressoes  goto 95


state 65
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : '(' expressao . ')'  (58)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	')'  shift 96
	.  error


state 66
	expressao : expressao OPERATOR_LE . expressao  (59)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 97


state 67
	expressao : expressao OPERATOR_GE . expressao  (60)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 98


state 68
	expressao : expressao OPERATOR_EQ . expressao  (61)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 99


state 69
	expressao : expressao OPERATOR_NE . expressao  (62)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 100


state 70
	expressao : expressao OPERATOR_AND . expressao  (63)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 101


state 71
	expressao : expressao OPERATOR_OR . expressao  (64)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 102


state 72
	expressao : expressao '<' . expressao  (56)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 103


state 73
	expressao : expressao '>' . expressao  (57)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 104


state 74
	expressao : expressao '+' . expressao  (52)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 105


state 75
	expressao : expressao '-' . expressao  (53)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 106


state 76
	expressao : expressao '*' . expressao  (54)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 107


state 77
	expressao : expressao '/' . expressao  (55)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 108


state 78
	lista_expressoes_nao_vazia : expressao ',' . lista_expressoes_nao_vazia  (37)

	TK_IDENTIFIER  shift 40
	LIT_INTEGER  shift 41
	LIT_FLOATING  shift 42
	LIT_FALSE  shift 43
	LIT_TRUE  shift 44
	LIT_CHARACTER  shift 45
	LIT_STRING  shift 46
	'('  shift 47
	.  error

	expressao  goto 49
	lista_expressoes_nao_vazia  goto 109


state 79
	atribuicao : TK_IDENTIFIER '[' expressao . ']' '=' expressao  (34)
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	']'  shift 110
	.  error


state 80
	atribuicao : TK_IDENTIFIER '=' expressao .  (33)
	expressao : expressao . '+' expressao  (52)
	expressao : expressao . '-' expressao  (53)
	expressao : expressao . '*' expressao  (54)
	expressao : expressao . '/' expressao  (55)
	expressao : expressao . '<' expressao  (56)
	expressao : expressao . '>' expressao  (57)
	expressao : expressao . OPERATOR_LE expressao  (59)
	expressao : expressao . OPERATOR_GE expressao  (60)
	expressao : expressao . OPERATOR_EQ expressao  (61)
	expressao : expressao . OPERATOR_NE expressao  (62)
	expressao : expressao . OPERATOR_AND expressao  (63)
	expressao : expressao . OPERATOR_OR expressao  (64)

	OPERATOR_LE  shift 66
	OPERATOR_GE  shift 67
	OPERATOR_EQ  shift 68
	OPERATOR_NE  shift 69
	OPERATOR_AND  shift 70
	OPERATOR_OR  shift 71
	'<'  shift 72
	'>'  shift 73
	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	KW_ELSE  reduce 33
	KW_WHILE  reduce 33
	';'  reduce 33
	'}'  reduce 33


state 81
	seq_comando : decl_var ';' . seq_comando  (30)
	comando : .  (25)

	KW_DECLARE  shift 1
	KW_IF  shift 15
	KW_WHILE  shift 16
	KW_DO  shift 17
	KW_INPUT  shift 18
	KW_RETURN  shift 19
	KW_OUTPUT  shift 20
	TK_IDENTIFIER  shift 21
	'{'  shift 22
	';'  reduce 25
	'}'  reduce 25

	decl_var  goto 53
	decl_vetor  goto 54
	comando  goto 55
	bloco_comando  goto 24
	controle_fluxo  goto 25
	atribuicao  goto 26
	input  goto 27
	output  goto 28
	return  goto 29
	seq_comando  goto 111


state 82
	seq_comando : decl_vetor ';' . seq_comando  (32)
	comando : .  (25)

	KW_DECLARE  shift 1
	KW_IF  shift 15
	KW_WHILE  shift 16
	KW_DO  shift 17
	KW_INPUT  shift 18
	KW_RETURN  shift 19
	KW_OUTPUT  shift 20
	TK_IDENTIFIER  shift 21
	'{'  shift 22
	';'  reduce 25
	'}'  reduce 25
